# wgpucube

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build-wasm.yml  ci.yml  deploy-wasm.yml
src/: cube.rs  main.rs
web/: index.html  style.css  trunk.toml
wgpucube/: Cargo.toml
wgpucube/src/: app.rs  cube.rs  cube_smooth.wgsl  egui.rs  lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: clippy.rs  main.rs  run_ios.rs  run_wasm.rs
