[package]
name = "wgpucube"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebGPU cross platform demo using Rust, winit, and wgpu"

[dependencies]
bytemuck = "1.24.0"
cfg-if = "1.0.4"
glam = "0.30.9"
pollster = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wgpu = "27.0.1"
winit = "0.30.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-tracing = "2.1.0"
