[package]
name = "wgpucube"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebGPU cross platform demo using Rust, winit, and wgpu"

[dependencies]
bytemuck = "1.24.0"
cfg-if = "1.0.4"
glam = "0.30.9"
pollster = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wgpu = "27.0.1"
winit = "0.30.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
wasm-tracing = "2.1.0"
web-sys = { version = "0.3.82", default-features = false }

[package.metadata.bundle.bin.wgpucube]
name = "wgpucube"
identifier = "com.github.tomstokes.wgpucube"
# TODO: Create app icons
# icon = ["path/to/icon*.png"]
category = "Developer Tool"
short_description = "wgpu and winit example app"
long_description = """
An example application written in Rust which uses winit and wgpu to render a
simple 3D spinning cube with hardware accelerated graphics.
"""
